k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jusupcpa
  labels:
    app: jusupcpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jusupcpa
  template:
    metadata:
      labels:
        app: jusupcpa
    spec:
      containers:
        - name: jusupcpa-container
          image: almuko/jusupcpa:latest   # 👈 CI подменит этот тег на SHA
          imagePullPolicy: Always         # 👈 всегда тянем новый образ, даже если тег одинаковый
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:                  # 👈 проверка живости
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:                 # 👈 проверка готовности
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
