k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jusupcpa
spec:
  type: ClusterIP
  selector:
    app: jusupcpa
  ports:
    - port: 80
      targetPort: 80
