k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jusupcpa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: uibirzhasi.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jusupcpa
                port:
                  number: 80
